Fix touch drag on mobile causing window to scroll

--- a/app/javascript/components/chessboard/chessboard.styl
+++ b/app/javascript/components/chessboard/chessboard.styl
@@ -16,7 +16,6 @@
     height 12.5%
     float left
     transition background 0.1s ease-in-out
-    touch-action none
     position relative
 
     &.light 
